[package]
name = "rust-hypervisor"
version = "0.1.0"
edition = "2021"
description = "A minimal hypervisor implementation in Rust"
repository = "https://github.com/yourusername/rust-hypervisor"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your.email@example.com>"]

[lib]
name = "rust_hypervisor"
path = "src/lib.rs"

[[bin]]
name = "rust-hypervisor"
path = "src/main.rs"

[dependencies]
kvm-ioctls = "0.12.0"
kvm-bindings = "0.6.0"
libc = { version = "0.2", features = ["extra_traits"] }
log = "0.4"
simplelog = "0.12"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.0"
goblin = "0.8.0"
clap = { version = "4.0", features = ["derive"] }
vm-memory = { version = "0.13.1", features = ["backend-mmap", "backend-atomic"] }
bitflags = "2.0"
pnet = { version = "0.31.0", default-features = false }
getrandom = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3.2", features = ["termination"] }
tempfile = "3.2"
virtio-queue = "0.10.0"
virtio-bindings = "0.2.6"
event-manager = "0.4.2"
vhost = { version = "0.9.0", features = ["vhost-user"] }
vhost-user-backend = "0.11.0"
tokio = { version = "1.0", features = ["full"] }
vmm-sys-util = "0.11.2"

[dev-dependencies]
serial_test = "2.0"
